--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8">
     <title>Week 4 Assignment</title>
     <!-- Create and link a CSS file! -->
+    <link rel="stylesheet" href="stylesheet.css"/>
   </head>
-  <body>
+
+  <header>
     <h1>Week 4 Assignment - Part 2</h1>
     <p>Check console for errors.</p>
+  </header>
+
+  <body>
+    
   </body>
 </html>
