--- a/assignment/index.html
+++ b/assignment/index.html
@@ -17,5 +17,7 @@
         <h2>My name is Maia</h2>
     </div>
 
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.1hC5ZWnG-d6Pn7_leJz6mAHaEK%26pid%3DApi&f=1" />
+  
   </body>
 </html>
