added h3 element along with background and font color

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -19,5 +19,6 @@
 
     <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.1hC5ZWnG-d6Pn7_leJz6mAHaEK%26pid%3DApi&f=1" />
   
+    <h3>And I take Metro Transit</h3>
   </body>
 </html>
